@@ -1,3 +1,4 @@
+* Use singleton for TableHandler
 * Add authentication services
 * Don't catch TimeoutException in the error handler
 * Remove deprecated bytes_to_wsgi call
